Thu Dec 28 11:33:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

          This is the first commit for a new part for TAO which hopefully
          gets standardized next year. The final goal is to implement
          Zipped GIOP (ZIOP). At the moment an ORB supports ZIOP the application
          programmer can specify using policies that compression can be
          applied on the application data send over the wire. This first
          commit is the Compression module that delivers the infrastructure
          classes with which data can be compressed. This can be used
          by regular applications but then also by the ORB in the future.

          This effort is supported by multiple parties, IONA did the
          initial effort for Orbix and triggered this step, Remedy IT
          will do the implementation for TAO, Andre Spiegel will do
          the implementation for JacORB, IONA then for Orbix and PrismTech
          will assist when needed and will keep an eye on the OMG process.

          This commit adds first initial support, it is not 100% ready
          but it is usable. This way we can share the code with the other
          parties more easily and attract more people to this effort. Be
          aware that the IDL can change, this is work in progress, not
          a final spec.

        * MPC/config/compression.mpb:
          New base project for the compresion library

        * MPC/config/zlibcompressor.mpb:
          New base project for the zlib compressor

        * docs/Libraries.html:
          Corrected link to MPC readme

        * docs/ORBEndpoint.html:
          Small layout change

        * tao/Compression/Base_Compressor.cpp:
        * tao/Compression/Base_Compressor.h:
        * tao/Compression/Compression.cpp:
        * tao/Compression/Compression.h:
        * tao/Compression/Compression.pidl:
        * tao/Compression/compression_export.h:
        * tao/Compression/Compression_Manager.cpp: