@@ -272,6 +272,24 @@ and the dependencies outlined below are the same. <P>
    </td>
    <td>csd_threadpool.mpb</td>
    </tr>
+   <tr align=left>
+   <th>libTAO_Compression.so</th>
+   <td>Support for Compression. This library can
+    be loaded statically or dynamically. Applications are required to
+    <code> #include "tao/Compression/Compression.h"
+    </code> for static loading.
+   </td>
+   <td>compression.mpb</td>
+   </tr>
+   <tr align=left>
+   <th>libTAO_ZlibCompressor.so</th>
+   <td>Support for Zlib Compression. This library can
+    be loaded statically or dynamically. Applications are required to
+    <code> #include "tao/Compression/zlib/ZlibCompressor.h"
+    </code> for static loading.
+   </td>
+   <td>zlibcompressor.mpb</td>
+   </tr>
 </tr>
 </table>
 
