@@ -1,3 +1,8 @@
+Thu Dec 28 12:22:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * docs/Libraries.html:
+          Documented the new compression libraries
+
 Thu Dec 28 11:33:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
           This is the first commit for a new part for TAO which hopefully
